Validacao da cidade e carregamento da cidade da pessoa

--- a/src/app/pessoas/pessoas-cadastro/pessoas-cadastro.component.html
+++ b/src/app/pessoas/pessoas-cadastro/pessoas-cadastro.component.html
@@ -61,13 +61,25 @@
                 <p-dropdown placeholder="Selecione..."
                     [filter]="true" [options]="estados"
                     [(ngModel)]="codEstadoSelecionado" name="codEstadoSelecionado"
-                    (onChange)="carregarCidades()"></p-dropdown>
+                    (onChange)="carregarCidades()"
+                    #estado="ngModel" required
+                    emptyFilterMessage="Nenhum registro encontrado"></p-dropdown>
+
+                <app-message [control]="estado" error="required"
+                    text="Informe o estado"></app-message>
             </div>
 
             <div class="p-col-12 p-md-6 p-fluid">
                 <label>Cidade</label>
                 <p-dropdown placeholder="Selecione..."
-                    [filter]="true" [options]="cidades"></p-dropdown>
+                    [filter]="true" [options]="cidades"
+                    [(ngModel)]="pessoa.endereco.cidade.codigo" name="cidade"
+                    #cidade="ngModel" required
+                    [disabled]="!codEstadoSelecionado"
+                    emptyFilterMessage="Nenhum registro encontrado"></p-dropdown>
+
+                <app-message [control]="cidade" error="required"
+                    text="Informe a cidade"></app-message>
             </div>
 
             <div class="p-col-12">
